--- a/pro/Cargo.toml
+++ b/pro/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.0", features = ["full"] }
+redis = { version = "0.27.6", features = ["aio", "tokio-comp"] }
+tokio = { version = "1", features = ["full", "macros"] }
